--- a/style.css
+++ b/style.css
@@ -10,11 +10,13 @@
 :root {
     --primary-color:rgb(253, 235, 212);
     --secondary-color: rgb(0, 0, 0);
+    --button-color:rgb(255, 215, 163);
 }
 
 .dark-theme {
-    --primary-color: rgb(0, 2, 26);
+    --primary-color: rgb(0, 4, 48);
     --secondary-color:   #F5F5DC;
+    --button-color:rgb(0, 7, 90);
 
 }
 
@@ -144,7 +146,7 @@ button{
     border: none;
     outline: none;
     padding: 16px 50px;
-background-color: rgb(255, 215, 163);
+background-color: var(--button-color);
     color: #fff;
     font-size: 16px;
     cursor: pointer;
